src/test/ui/did_you_mean/use_instead_of_import.stderr
error: expected item, found `import`
  --> $DIR/use_instead_of_import.rs:3:1
   |
LL | import std::{
   | ^^^^^^ help: items are imported using the `use` keyword

error: expected item, found `using`
  --> $DIR/use_instead_of_import.rs:9:5
   |
LL | pub using std::io;
   |     ^^^^^ help: items are imported using the `use` keyword

error: aborting due to 2 previous errors

